# foldl-transduce-attoparsec

./: CHANGELOG  README.md  foldl-transduce-attoparsec.cabal
src/Control/Foldl/Transduce/: Attoparsec.hs
tests/: doctests.hs  tests.hs
